--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "jest": "^29.7.0",
     "jest-junit": "^16.0.0",
     "nodemon": "^3.1.4",
+    "react-datepicker": "^7.4.0",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
